--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -3,21 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:title="Find Friends"
+        android:title="@string/find_friends"
         android:id="@+id/main_find_friends"
         app:showAsAction="never">
 
     </item>
 
     <item
-        android:title="Settings"
+        android:title="@string/create_a_group"
+        android:id="@+id/main_create_group"
+        app:showAsAction="never">
+
+    </item>
+
+    <item
+        android:title="@string/settings"
         android:id="@+id/main_settings"
         app:showAsAction="never">
 
     </item>
 
     <item
-        android:title="Logout"
+        android:title="@string/logout"
         android:id="@+id/main_logout"
         app:showAsAction="never">
 
