implemented feature for signing up with phone number

--- a/app/src/main/res/layout/activity_phone_login.xml
+++ b/app/src/main/res/layout/activity_phone_login.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="180dp"
         android:background="@drawable/inputs"
         android:padding="8dp"
-        android:hint="Type phone number here..."
+        android:hint="+254..."
         android:textAllCaps="false"
         android:textSize="15sp"
         android:drawableStart="@drawable/phone"
