--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,7 +10,7 @@
         android:id="@+id/signUp_image"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:src="@drawable/signup"
+        android:src="@drawable/signup2"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:scaleType="fitCenter"/>
