--- a/app/src/main/res/layout/activity_find_friends.xml
+++ b/app/src/main/res/layout/activity_find_friends.xml
@@ -14,9 +14,7 @@
         android:id="@+id/find_friends_recycler_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:layout_below="@+id/find_friends_toolbar"
-        android:layout_marginTop="208dp" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
