--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChatActivity">
+    tools:context=".ChatActivity"
+    android:background="@android:color/darker_gray">
 
     <include
         android:id="@+id/chat_toolbar"
@@ -31,10 +32,10 @@
 
         <EditText
             android:id="@+id/input_message"
-            android:layout_width="330dp"
+            android:layout_width="310dp"
             android:layout_height="wrap_content"
             android:hint="Type message here..."
-            android:padding="15dp"/>
+            android:padding="10dp"/>
         
         <ImageButton
             android:id="@+id/send_message_btn"
