--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -10,7 +10,7 @@
     </item>
 
     <item
-        android:title="@string/create_a_group"
+        android:title="@string/create_group"
         android:id="@+id/main_create_group"
         app:showAsAction="never">
 
