--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -18,11 +18,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/chat_toolbar"
-        android:layout_above="@id/chat_linear_layout">
+        android:layout_above="@id/chat_linear_layout"
+        android:layout_marginBottom="6dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/chat_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -31,18 +32,31 @@
         android:background="@android:color/background_light"
         android:orientation="horizontal">
 
+        <ImageButton
+            android:id="@+id/send_files_btn"
+            android:layout_width="60dp"
+            android:layout_height="50dp"
+            android:src="@drawable/send_file"
+            android:layout_alignParentStart="true"
+            android:backgroundTint="@android:color/white"/>
+
         <EditText
             android:id="@+id/input_message"
-            android:layout_width="310dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Type message here..."
-            android:padding="10dp"/>
+            android:padding="15dp"
+            android:maxLines="5"
+            android:layout_toEndOf="@+id/send_files_btn"
+            android:layout_toStartOf="@+id/send_message_btn"/>
         
         <ImageButton
             android:id="@+id/send_message_btn"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/send"/>
-    </LinearLayout>
+            android:src="@drawable/send"
+            android:layout_alignParentEnd="true"
+            android:backgroundTint="@android:color/white"/>
+    </RelativeLayout>
 
 </RelativeLayout>
