--- a/app/src/main/res/layout/custom_messages_layout.xml
+++ b/app/src/main/res/layout/custom_messages_layout.xml
@@ -22,6 +22,22 @@
         android:textSize="14sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"/>
+    
+    <ImageView
+        android:id="@+id/message_sender_image_view"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="13dp"
+        android:scaleType="centerCrop"/>
+
+    <ImageView
+        android:id="@+id/message_receiver_image_view"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignParentStart="true"
+        android:layout_margin="13dp"
+        android:scaleType="centerCrop"/>
 
     <TextView
         android:id="@+id/sender_message_text"
